--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -98,6 +98,7 @@ jobs:
     - name: Train models
       run: |
         echo "Training models with MLflow..."
+        export MLFLOW_TRACKING_URI=./mlruns
         python train.py
     
     - name: Validate model artifacts
@@ -213,7 +214,7 @@ jobs:
       uses: actions/checkout@v3
     
     - name: Download model artifacts
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: trained-models
         path: models/
@@ -252,7 +253,7 @@ jobs:
       uses: actions/checkout@v3
     
     - name: Download model artifacts
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: trained-models
         path: models/
