Fix: Load Docker image for testing

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -228,6 +228,7 @@ jobs:
         context: .
         push: false
         tags: mlops-incident-sla:latest
+        load: true
         cache-from: type=gha
         cache-to: type=gha,mode=max
     
